NOTE: for more news about the package, see https://github.com/florianhartig/DHARMa/releases


DHARMa 0.4.4
============

Minor changes

- re-introduced glmmTMB to suggests
- phyr moved to enhances
- re-modelled package unit tests
- added RStan, CmdStanR, rjags, BayesianTools to enhances, as they coudld be used with DHARMa

New features

- Added rotation option to all functions that create residuals (simulateResiduals, recalculateResiduals, createDHARMa)

Documentation

- Added help comments about autocorrelation structures, in particular in simulateResiduals, testSpatialAutocorrelation, testTemporalAutocorrelation
- Added example about the use of rotation in testTemporalAutocorrelation
- Improved help of dispersion test

DHARMa 0.4.3
============

Bugfixes

- Removed glmmTMB completely, see #289

DHARMa 0.4.2
============

Bugfixes

- Moved glmmTMB from suggest to import because this package is used in the vignette, see #289

Minor changes

- Added hurricane dataset
- Help and vignette updates
- phyr added in suggests


DHARMa 0.4.1
============

Bugfixes

- Force method = traditional for refit = T, as it turns out that the PIT method is not a good idea on the residuals, see #272


DHARMa 0.4.0
============

This is actually a bugfix release for 0.3.4, but on reflection I decided that 0.4.0 should have been a minor release, so I pushed the version number up to 0.4.0

Bugfixes

- bugfix in getResiduals, which had consequences for quantile residual calculations with refit = T


DHARMa 0.3.4
============

0.3.4 is a relatively important release with various minor improvements a smaller new features, most noteworthy the support of glmmAdaptive

New features

- added parametric dispersion test in testDispersion (0.3.3.2)
- support for glmmAdaptive (0.3.3.1)
- new plot for categorical predictors
- new plots for result of runBenchmarks

Major changes

-

Minor changes
