@@ -1,6 +1,6 @@
 Package: DHARMa
 Title: Residual Diagnostics for Hierarchical (Multi-Level / Mixed) Regression Models
-Version: 0.4.3.3
+Version: 0.4.3.4
 Date: 2021-08-22
 Authors@R: c(person("Florian", "Hartig", email = "florian.hartig@biologie.uni-regensburg.de", role = c("aut", "cre"), comment=c(ORCID="0000-0002-6255-9059")), person("Lukas", "Lohse", role = "ctb"))
 Description: The 'DHARMa' package uses a simulation-based approach to create
@@ -23,8 +23,6 @@ Imports:
     grDevices,
     Matrix,
     parallel,
-    doParallel,
-    foreach,
     gap,
     lmtest,
     ape,
