@@ -4,12 +4,17 @@ NOTE: for more news about the package, see https://github.com/florianhartig/DHAR
 DHARMa 0.4.4
 ============
 
+Major changes
+
+- remodelled tests so that all tested packages can be used conditionally
+
 Minor changes
 
 - re-introduced glmmTMB to suggests
 - phyr moved to enhances
 - re-modelled package unit tests
 - added RStan, CmdStanR, rjags, BayesianTools to enhances, as they coudld be used with DHARMa
+- moved parallel calculations in runBenchmark to R native parallel functions
 
 New features
 
